src/test/deca/context/invalid/provided/invalid_comparison_int_boolean.deca
// Description:
//    Comparaison entre un int et un boolean.
//
// Resultats:
//invalid_comparison_int_boolean.deca:14:17: Opérateur < non applicable to those types : int and boolean
//
// Historique:
//    cree le 12/01/2025
{
int x = 10;
boolean y = true;

// Doit etre refuse.
boolean result = (x < y);
}
